<package>
  <name>py_trees_msgs</name>
  <version>0.0.1</version>
  <description>
    Messages used by py_trees
  </description>

  <license>BSD</license>  

  <url type="website">http://www.ros.org/wiki/gopher_msgs</url>
  <url type="repository">https://bitbucket.org/yujinrobot/gopher_msgs</url>
  <url type="bugtracker">https://bitbucket.org/yujinrobot/issues</url>

  <maintainer email="m.staniaszek@gmail.com">Michal Staniaszek</maintainer>
  <author>Michal Staniaszek</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uuid_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>uuid_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
