<?xml version="1.0"?>
<package>
  <name>py_trees_msgs</name>
  <version>0.3.0</version>
  <description>
    Messages used by py_trees
  </description>

  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <maintainer email="m.staniaszek@gmail.com">Michal Staniaszek</maintainer>
  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/py_trees_msgs</url>
  <url type="repository">https://github.com/stonier/py_trees_msgs</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_msgs/issues</url>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uuid_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>uuid_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
