<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">  <name>py_trees_msgs</name>
  <version>0.4.3</version>
  <description>
    Messages used by py_trees_ros and some extras for the mock demos/tests.
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/py_trees_msgs</url>
  <url type="repository">https://github.com/stonier/py_trees_msgs</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_msgs/issues</url>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <!-- <build_depend>actionlib_msgs</build_depend> -->
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_depend>unique_identifier_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- <exec_depend>actionlib_msgs</exec_depend> -->
  <!-- <exec_depend>dynamic_reconfigure</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <!-- rosidl_cmake requires any message package be part of this group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
